--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass"
+              "src/styles.sass",
             ],
             "scripts": [
               "./node_modules/hammerjs/hammer.min.js"
